# android-haskell-activity

./: .gitignore  AndroidManifest.xml  HaskellActivity.cabal  README.md  build.xml  custom_rules.xml  local.properties
jni/: Android.mk  Application.mk
res/values/: strings.xml
src/: HaskellActivity.hs  init.c
src/org/haskell/: HaskellActivity.java
