name: HaskellActivity
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
-- license-file: LICENSE
author: CJ van den Berg
maintainer: cj@vdbonline.com
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.8

executable libhaskell.so
  build-depends: base, text, transformers, foreign-jni
  hs-source-dirs: src
  ghc-options: -optl-shared -no-hs-main -threaded
  main-is: HaskellActivity.hs
  c-sources: src/init.c
  include-dirs: src
  cc-options: -shared
  ld-options: -shared
